[package]
name = "dyn_bitmap"
version = "0.3.2"
authors = ["Patsakula Nikita <nikita.patsakula@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Dynamically sized lightweight bitmap implementation."
documentation = "https://docs.rs/dyn_bitmap"
repository = "https://github.com/npatsakula/bitmap"
readme = "README.md"

[dev-dependencies]
criterion = "0.3"

[dependencies]
thiserror = "1"

[[bench]]
name = "constructor"
harness = false
